--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,6 @@
-# Core data processing
-pandas>=2.0.0
-numpy>=1.24.0
-
-# Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.14.0
-
-# Machine Learning
-scikit-learn>=1.3.0
-imbalanced-learn>=0.11.0
-
-# Deep Learning
-torch>=2.0.0
-torchvision>=0.15.0
-
-# Web Application
-streamlit>=1.28.0
-
-# Model Management
-joblib>=1.3.0
-pickle-mixin>=1.0.2
-
-# Progress tracking
-tqdm>=4.65.0
-
-# Cloud deployment (optional)
-boto3>=1.28.0
-
-# Development and testing
-jupyter>=1.0.0
-ipywidgets>=8.0.0
+streamlit==1.39.0
+pandas==2.2.3
+numpy==1.26.4
+scikit-learn==1.5.2
+torch==2.4.1
+joblib==1.4.2
