--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.35.0
 numpy==1.26.4
-pandas==2.2.2
+pandas==2.2.5
 scikit-learn==1.5.2
-torch==2.8.0+cpu
-torchvision==0.17.2+cpu
-torchaudio==2.8.0+cpu
+torch==2.8.0
+torchvision==0.17.2
+torchaudio==2.8.0
 joblib==1.4.2
--f https://download.pytorch.org/whl/cpu
+
 
