--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+# Core
 streamlit==1.44.0
+
+# Data handling
 numpy==2.3.3
 pandas==2.3.3
 scikit-learn==1.3.2
-torch==2.8.0
-torchvision==0.17.2
-torchaudio==2.8.0
 joblib==1.4.2
+
+# PyTorch for tabular model
+torch==2.8.0
+
+
